--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js",
     "start": "webpack-dev-server"
   },
   "author": "CodeRoad",
@@ -14,6 +14,7 @@
     "lodash-es": "^4.17.15"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^4.2.1",
     "file-loader": "^6.0.0",
